--- a/ATISMobile/ATISMobile/ProvinceSelectionPage.xaml
+++ b/ATISMobile/ATISMobile/ProvinceSelectionPage.xaml
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ATISMobile.LoadsPage"
-             Title="بار موجود">
-
+             x:Class="ATISMobile.ProvinceSelectionPage"  
+             FlowDirection="RightToLeft"
+             BackgroundColor="White"
+             Title="استان های دارای بار"
+             Padding="20">
     <ContentPage.Content>
         <StackLayout BackgroundColor="White" >
-            <StackLayout x:Name="_StackLayoutEmptyAnnounce" IsVisible="False"  BackgroundColor="White" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" >
+            <StackLayout x:Name="_StackLayoutEmptyProvince" IsVisible="False"  BackgroundColor="White" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" >
                 <Label Text="باری در سامانه موجود نیست" TextColor="Red" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" FontSize="Large" >
                     <Label.FontFamily>
                         <OnPlatform x:TypeArguments="x:String">
@@ -32,7 +34,7 @@
                         <ViewCell  >
                             <Frame HasShadow="true" Margin="5" BorderColor="Red" CornerRadius="15" BackgroundColor="OrangeRed" >
                                 <StackLayout Orientation="Vertical" BackgroundColor="OrangeRed" Padding="1,0,1,0"  >
-                                    <Label  BackgroundColor="OrangeRed"  TextColor="GreenYellow"   FontSize="Large" FontAttributes="Bold" Text = "{Binding LoadnEstelamId}" >
+                                    <Label  BackgroundColor="OrangeRed"  TextColor="GreenYellow"   FontSize="Large" FontAttributes="Bold" Text = "{Binding ProvinceId}" >
                                         <Label.FontFamily>
                                             <OnPlatform x:TypeArguments="x:String">
                                                 <On Platform="iOS" Value="Samim" />
@@ -44,25 +46,7 @@
                                             <TapGestureRecognizer Tapped="OnTapGestureRecognizerTapped"/>
                                         </Label.GestureRecognizers>
                                     </Label>
-                                    <Label  BackgroundColor="OrangeRed"  TextColor="White"  FontSize="Large" FontAttributes="Bold" Text = "{Binding LoadCapacitorLoadTitleTargetCityTotalAmount}" >
-                                        <Label.FontFamily>
-                                            <OnPlatform x:TypeArguments="x:String">
-                                                <On Platform="iOS" Value="Samim" />
-                                                <On Platform="Android" Value="Samim-Bold.otf#Samim" />
-                                                <On Platform="UWP" Value="Assets/Fonts/Lobster-Regular.ttf#Lobster" />
-                                            </OnPlatform>
-                                        </Label.FontFamily>
-                                    </Label>
-                                    <Label   BackgroundColor="OrangeRed"  TextColor="Yellow" FontSize="Small" FontAttributes="Bold"   Text = "{Binding TransportCompanyTarrifPrice}">
-                                        <Label.FontFamily>
-                                            <OnPlatform x:TypeArguments="x:String">
-                                                <On Platform="iOS" Value="Samim" />
-                                                <On Platform="Android" Value="Samim-Bold.otf#Samim" />
-                                                <On Platform="UWP" Value="Assets/Fonts/Lobster-Regular.ttf#Lobster" />
-                                            </OnPlatform>
-                                        </Label.FontFamily>
-                                    </Label>
-                                    <Label   BackgroundColor="OrangeRed"  TextColor="Blue"  FontSize="Medium" FontAttributes="Bold"  Text = "{Binding Description}" >
+                                    <Label  BackgroundColor="OrangeRed"  TextColor="GreenYellow"   FontSize="Large" FontAttributes="Bold" Text = "{Binding ProvinceTitle}" >
                                         <Label.FontFamily>
                                             <OnPlatform x:TypeArguments="x:String">
                                                 <On Platform="iOS" Value="Samim" />
