--- a/ATISMobile/ATISMobile/MobileEntryPage.xaml
+++ b/ATISMobile/ATISMobile/MobileEntryPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ATISMobile.MobileEntryPage"
              BackgroundColor="White"
-             BackgroundImage="@drawable/BlueBackGround"
+             BackgroundImage="@drawable/BG4"
+             NavigationPage.HasNavigationBar="false"
              Title="سامانه اطلاع رسانی بار آتیس - استان اصفهان">
     <ContentPage.Content>
         <StackLayout Padding="20,10,20,10" BackgroundColor="Transparent" >
@@ -44,7 +45,7 @@
                     </OnPlatform>
                 </Entry.FontFamily>
             </Entry>
-            <Button x:Name="_Button" BorderWidth="2" BorderColor="Black"  CornerRadius="15" FontSize="Medium"  Text="ارسال" BackgroundColor="Green" TextColor="White" HorizontalOptions="Center" VerticalOptions="Start"  WidthRequest="100" HeightRequest="100" BorderRadius="50" Clicked="_Button_ClickedEvent" >
+            <Button x:Name="_ButtonSend" BorderWidth="2" BorderColor="Black"  CornerRadius="15" FontSize="Medium"  Text="ارسال" BackgroundColor="Green" TextColor="White" HorizontalOptions="Center" VerticalOptions="Start"  WidthRequest="100" HeightRequest="100" BorderRadius="50" Clicked="_ButtonSend_ClickedEvent" >
                 <Button.FontFamily>
                     <OnPlatform x:TypeArguments="x:String">
                         <On Platform="iOS" Value="Samim" />
