--- a/ATISMobile/ATISMobile/VerificationCodeEntryPage.xaml
+++ b/ATISMobile/ATISMobile/VerificationCodeEntryPage.xaml
@@ -9,7 +9,7 @@
     <ContentPage.Content>
         <StackLayout Padding="20,10,20,10" BackgroundColor="Transparent">
             <Label Text="" TextColor="Yellow"   HorizontalOptions="CenterAndExpand"  VerticalOptions="CenterAndExpand"   FontSize="Large" />
-            <Label Text="کد ارسال شده را وارد نمایید" TextColor="White"   HorizontalOptions="Center" VerticalOptions="Start"  FontSize="Large" >
+            <Label Text="کد ارسال شده را وارد نمایید" TextColor="Yellow"    HorizontalOptions="Center" VerticalOptions="Start"  FontSize="Large" >
                 <Label.FontFamily>
                     <OnPlatform x:TypeArguments="x:String">
                         <On Platform="iOS" Value="Samim" />
@@ -27,7 +27,7 @@
                     </OnPlatform>
                 </Entry.FontFamily>
             </Entry>
-            <Label x:Name="_LabelMobileNumber" Text="" TextColor="Gray"    HorizontalOptions="Center" VerticalOptions="Start"  FontSize="Large" >
+            <Label x:Name="_LabelMobileNumber" Text="" TextColor="YellowGreen"     HorizontalOptions="Center" VerticalOptions="Start"  FontSize="Large" >
                 <Label.FontFamily>
                     <OnPlatform x:TypeArguments="x:String">
                         <On Platform="iOS" Value="Samim" />
