--- a/ATISMobile/ATISMobile/ProvinceSelectionPage.xaml
+++ b/ATISMobile/ATISMobile/ProvinceSelectionPage.xaml
@@ -34,7 +34,7 @@
                         <ViewCell  >
                             <Frame HasShadow="true" Margin="5" BorderColor="Red" CornerRadius="15" BackgroundColor="OrangeRed" >
                                 <StackLayout Orientation="Vertical" BackgroundColor="OrangeRed" Padding="1,0,1,0"  >
-                                    <Label  BackgroundColor="OrangeRed"  TextColor="GreenYellow"   FontSize="Large" FontAttributes="Bold" Text = "{Binding ProvinceId}" >
+                                    <Label x:Name="_ProvinceId" IsVisible="False"  BackgroundColor="OrangeRed"  TextColor="GreenYellow"   FontSize="Large" FontAttributes="Bold" Text = "{Binding ProvinceId}" >
                                         <Label.FontFamily>
                                             <OnPlatform x:TypeArguments="x:String">
                                                 <On Platform="iOS" Value="Samim" />
@@ -54,6 +54,9 @@
                                                 <On Platform="UWP" Value="Assets/Fonts/Lobster-Regular.ttf#Lobster" />
                                             </OnPlatform>
                                         </Label.FontFamily>
+                                        <Label.GestureRecognizers>
+                                            <TapGestureRecognizer Tapped="OnTapGestureRecognizerTapped"/>
+                                        </Label.GestureRecognizers>
                                     </Label>
                                 </StackLayout>
                             </Frame>
