--- a/ATISMobile/ATISMobile/TruckPage.xaml
+++ b/ATISMobile/ATISMobile/TruckPage.xaml
@@ -2,10 +2,22 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ATISMobile.TruckPage"    
-             FlowDirection="RightToLeft"
              BackgroundColor="White"
-             Title="مشخصات ناوگان"
              Padding="15">
+
+    <NavigationPage.TitleView>
+        <StackLayout>
+            <Label Text="مشخصات ناوگان" TextColor="White" HorizontalTextAlignment="Center">
+                <Label.FontFamily>
+                    <OnPlatform x:TypeArguments="x:String">
+                        <On Platform="iOS" Value="Samim" />
+                        <On Platform="Android" Value="Samim-Bold.otf#Samim" />
+                        <On Platform="UWP" Value="Assets/Fonts/Lobster-Regular.ttf#Lobster" />
+                    </OnPlatform>
+                </Label.FontFamily>
+            </Label>
+        </StackLayout>
+    </NavigationPage.TitleView>
 
     <ContentPage.Content>
         <StackLayout>
