--- a/ATISMobile/ATISMobile/AnnouncementHallsPage.xaml
+++ b/ATISMobile/ATISMobile/AnnouncementHallsPage.xaml
@@ -2,8 +2,20 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ATISMobile.AnnouncementHallsPage"
-             Title="سالن های بار"
              Padding="30">
+    <NavigationPage.TitleView>
+        <StackLayout>
+            <Label Text="سالن های اعلام بار" TextColor="White" HorizontalTextAlignment="Center">
+                <Label.FontFamily>
+                    <OnPlatform x:TypeArguments="x:String">
+                        <On Platform="iOS" Value="Samim" />
+                        <On Platform="Android" Value="Samim-Bold.otf#Samim" />
+                        <On Platform="UWP" Value="Assets/Fonts/Lobster-Regular.ttf#Lobster" />
+                    </OnPlatform>
+                </Label.FontFamily>
+            </Label>
+        </StackLayout>
+    </NavigationPage.TitleView>
     <ContentPage.Content>
         <StackLayout>
             <ScrollView BackgroundColor="Transparent">
