--- a/ATISMobile/ATISMobile/AnnouncementHallsSelectionPage.xaml
+++ b/ATISMobile/ATISMobile/AnnouncementHallsSelectionPage.xaml
@@ -2,9 +2,21 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ATISMobile.AnnouncementHallsSelectionPage"
-            Title="مشاهده بار"
             Padding="30">
-    <ContentPage Title="تریلی" FlowDirection="RightToLeft"   Padding="10">
+    <NavigationPage.TitleView>
+        <StackLayout>
+            <Label Text="نوع بار" TextColor="White" HorizontalTextAlignment="Center">
+                <Label.FontFamily>
+                    <OnPlatform x:TypeArguments="x:String">
+                        <On Platform="iOS" Value="Samim" />
+                        <On Platform="Android" Value="Samim-Bold.otf#Samim" />
+                        <On Platform="UWP" Value="Assets/Fonts/Lobster-Regular.ttf#Lobster" />
+                    </OnPlatform>
+                </Label.FontFamily>
+            </Label>
+        </StackLayout>
+    </NavigationPage.TitleView>
+    <ContentPage Title="تریلی" FlowDirection="RightToLeft"   Padding="10" >
         <ContentPage.Content>
             <StackLayout>
                 <ScrollView BackgroundColor="Transparent">
