--- a/ATISMobile/ATISMobile/LoadAllocationsPage.xaml
+++ b/ATISMobile/ATISMobile/LoadAllocationsPage.xaml
@@ -1,8 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="ATISMobile.LoadAllocationsPage"
-             Title="بارهای انتخاب شده">
+             x:Class="ATISMobile.LoadAllocationsPage">
+    <NavigationPage.TitleView>
+        <StackLayout>
+            <Label Text="بارهای انتخاب شده" TextColor="White" HorizontalTextAlignment="Center">
+                <Label.FontFamily>
+                    <OnPlatform x:TypeArguments="x:String">
+                        <On Platform="iOS" Value="Samim" />
+                        <On Platform="Android" Value="Samim-Bold.otf#Samim" />
+                        <On Platform="UWP" Value="Assets/Fonts/Lobster-Regular.ttf#Lobster" />
+                    </OnPlatform>
+                </Label.FontFamily>
+            </Label>
+        </StackLayout>
+    </NavigationPage.TitleView>
+
     <ContentPage.Content>
         <StackLayout BackgroundColor="White" >
             <StackLayout x:Name="_StackLayoutEmptyAllocations" IsVisible="False"  BackgroundColor="White" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" >
